home-little-grid fixed with gap

--- a/public/css/views/home.scss
+++ b/public/css/views/home.scss
@@ -18,8 +18,9 @@
 
   @include up(775) {
     display: grid;
-    grid-template-columns: 1fr 0.03fr .7fr;
-    grid-template-rows: repeat(20, .1fr);
+    grid-template-columns: 1fr .7fr;
+    grid-template-rows: 1fr 2.8fr .1fr;
+    gap: var(--gap);
     margin-top: calc(-1 * calc(var(--gap) * 4.3));
   }
 }
@@ -39,17 +40,13 @@
 @include up(775) {
   .home-card-little {
     padding-left: calc(var(--gap) * 2);
+    grid-column: 2 / 3;
+    grid-row: 2/ 4;
   }
 
   .home-card-big {
-    grid-column: 1 / 3;
-    grid-row: 1 / 14;
-    z-index: 10;
-  }
-
-  .home-card-little {
-    grid-column: 2 / 4;
-    grid-row: 7 / 17;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
   }
 
   .welcome-mascott {
